fixed spacing and added submit button

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 
 #root {
   margin: 0;
-  padding-bottom: 250px;
 }
 
 body {
@@ -17,14 +16,7 @@ body {
   font-weight: 400;
   margin: 0;
   padding: 20px;
-  height: 100%;
   padding-bottom: 250px;
-  position: relavite
-}
-
-main {
-  margin: auto;
-  
 }
 
 /* h1 {
@@ -104,14 +96,14 @@ nav {
   color: rgb(157, 188, 15)
  }
 
- .footer {
+.footer {
   min-height: 150px;
   margin-top: 50px;
-  display: flex;
-  justify-content: center;
   position: fixed;
   bottom: 0;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .icon {
@@ -153,3 +145,7 @@ input {
   display: flex;
   width: 100%;
 ;}
+
+.wrapper {
+margin-bottom: 250px;
+}
