--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
 }
 
 a {
@@ -22,13 +23,22 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   /* display: flex;
   place-items: center; */
-  min-width: 320px;
+  /* min-width: 320px;
   min-height: 100vh;
   padding: 0;
+} */ 
+
+body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;  
+  line-height: 1.5;
+  font-weight: 400;
+  margin: 0;
+  padding: 20px;
 }
 
 h1 {
